# Istos

./: .gitignore  AGENTS.md  description.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  trove.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs
src/__tests__/: App.test.ts  RenderEntity.test.ts  TreeView.test.ts
src/__tests__/ecs/: World.test.ts
src/lib/: types.ts
src/lib/components/: Desktop.svelte  Grid.svelte  ModeToggle.svelte  RenderEntity.svelte  RenderFile.svelte  TreeNode.svelte  TreeView.svelte
src/lib/ecs/: Component.ts  Entity.ts  System.ts  World.ts
src/lib/stores/: world.ts
