[package]
name = "deskshell"
version = "0.1.0"
description = "A desktop shell using ECS to organize files and folders"
authors = ["you"]
edition = "2021"

[lib]
name = "deskshell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempdir = "0.3"
